developer and designer

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="google-site-verification" content="cLmYy2sUvJc0jYQTC9ecP9yDgcPkXGTm8_EeLSPq2SU" />
     <meta name="keywords"
         content="sunil jangir, sunil, web developer sunil, supermatt7, supermatt, matt7, supermate7, ips business school, ips college jaipur, ipsb, bca, BCA">
-        <meta http-equiv='cache-control' content='no-cache'> 
-<meta http-equiv='expires' content='0'> 
-<meta http-equiv='pragma' content='no-cache'>
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
     <link rel="stylesheet" href="css/main/styles.css">
     <link rel="shortcut icon" href="img/logonobg.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -44,7 +44,7 @@
                     <center> <a href="#"><img src="img/logonobg.png" alt="logo" class="logo-img"></a></center>
                     <div class="sunil">
                         <h2 id="sunil">sunil</h2>
-                        <p class="a-developer">A FrontEnd Developer</p>
+                        <p class="a-developer">A FrontEnd Developer and Designer</p>
                     </div>
                 </div>
                 <div class="list-type-2">
@@ -235,7 +235,8 @@
                             src="img/colored-css.png" alt="colored css" class="img-for-skills"><img
                             src="img/colored-js.png" alt="colored js" class="img-for-skills">
                     </div> -->
-                    <h2 class="temp-heading-for-blog">blog is in developement, please wait a few more days to get exciting articles.</h2>
+                    <h2 class="temp-heading-for-blog">blog is in developement, please wait a few more days to get
+                        exciting articles.</h2>
                     <!-- </div>
                 <br>
                 <div class="flex-for-skills-2">
@@ -331,7 +332,8 @@
                 <form method="POST" class="form" action="https://formsubmit.co/matt348806@gmail.com"
                     onsubmit="formSubmit()">
                     <p class="read-before-you-write">I am a freelancer, i seek fun projects and enjoy when i do
-                        them. Web Developement is not just my career but a hobby. I would love to work for you. If you have other queries, don't hesitate, just drop a line.</p>
+                        them. Web Developement is not just my career but a hobby. I would love to work for you. If you
+                        have other queries, don't hesitate, just drop a line.</p>
                     <div class="name-input-flex">
                         <input type="text" name="Firstname" id="name" placeholder=" First name" required>
                         <input type="text" name="Lastname" id="name2" placeholder=" Last name" required>
