added some text changes

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 <li class="about-lists about-lists-8"><span class="span-2-8">Secondary Education
                                         (Science)</span><br>B.R.M School</li>
                                 <li class="about-lists about-lists-9"><span class="span-2-9">Graduation</span><br>BCA
-                                    from I.P.S Business School
+                                    from IPS college of technology and management.
                                 </li>
                             </ul>
                         </div>
@@ -352,7 +352,7 @@
                     </div>
                     <div class="contact-info">
                         <h4>Phone:</h4>
-                        <p>+91 8875710636</p>
+                        <p>+91 8875170636</p>
                     </div>
                     <div class="contact-icon">
                         <img class="fas fa-envelope" src="img/gmail.png" width="35px">
