--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <footer class="footer">
         <div class="flex-for-footer">
             <img src="img/logonobg.png" alt="logo" class="logo-img-2">
-            <p class="copyright-warning">Copyright © 2022 supermatt7.</p>
+            <p class="copyright-warning">Copyright © 2022 supermatt7(sunil jangir).</p>
         </div>
     </footer>
     <hr>
