--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </div>
             <div class="container-for-contact">
                 <form method="POST" class="form" action="https://formsubmit.co/matt348806@gmail.com"
-                    onsubmit="formSubmit()">
+                    onsubmit="formSubmit()" netlify>
                     <p class="read-before-you-write">I am a freelancer, i seek fun projects and enjoy when i do
                         them. Web Developement is not just my career but a hobby. I would love to work for you. If you
                         have other queries, don't hesitate, just drop a line.</p>
