netlify form submission is succeaful

--- a/index.html
+++ b/index.html
@@ -340,11 +340,9 @@
                     </div>
                     <input type="email" id="email" name="email" placeholder="Email" required>
                     <input type="tel" id="phone" name="phone" placeholder="Mobile numbers (optional)">
-                    <textarea id="message" name="message" rows="10" placeholder="How can i help you? "></textarea>
+                    <textarea id="message" name="message" rows="10" placeholder="type your message here"></textarea>
                     <button type="submit" id="button-2">send</button>
-                    <input type="hidden" name="_autoresponse" value="you have reached sunil, and can expect a responce within 24 hours,
-                    thank you.">
-                    <input type="hidden" name="_captcha" value="false">
+                    
                 </form>
                 <div class="contact-container-2">
                     <div class="contact-icon">
