updated meta discription

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Hey mate! I am Sunil a Front End Web Developer and Designer. I am a self taught developer. I fancy web designs and love to change them into a beautiful code. Contact me for more 😊">
+        content="hey there! i am sunil, A FrontEnd developer and designer. Drop me a line  if have any queries">
     <meta name="google-site-verification" content="cLmYy2sUvJc0jYQTC9ecP9yDgcPkXGTm8_EeLSPq2SU" />
     <meta name="keywords"
         content="sunil jangir, sunil, web developer sunil, supermatt7, supermatt, matt7, supermate7, ips business school, ips college jaipur, ipsb, bca, BCA">
@@ -17,12 +17,8 @@
     <link rel="stylesheet" href="css/main/styles.css">
     <link rel="shortcut icon" href="img/logonobg.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8887471273869621"
-        crossorigin="anonymous"></script>
     <title>supermatt7</title>
-    <!-- Add this inside the head tag of your HTML document -->
 
-    <!-- Add this inside the head tag of your HTML document -->
     <script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2"></script>
 
 
@@ -330,7 +326,7 @@
             </div>
             <!-- action="https://formsubmit.co/matt348806@gmail.com" -->
             <div class="container-for-contact">
-                <form netlify method="POST" class="form"  onsubmit="formSubmit()">
+                <form netlify method="POST" class="form" onsubmit="formSubmit()">
                     <p class="read-before-you-write">I am a freelancer, i seek fun projects and enjoy when i do
                         them. Web Developement is not just my career but a hobby. I would love to work for you. If you
                         have other queries, don't hesitate, just drop a line.</p>
@@ -342,7 +338,7 @@
                     <input type="tel" id="phone" name="phone" placeholder="Mobile numbers (optional)">
                     <textarea id="message" name="message" rows="10" placeholder="type your message here"></textarea>
                     <button type="submit" id="button-2">send</button>
-                    
+
                 </form>
                 <div class="contact-container-2">
                     <div class="contact-icon">
