--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <meta name="google-site-verification" content="cLmYy2sUvJc0jYQTC9ecP9yDgcPkXGTm8_EeLSPq2SU" />
     <meta name="keywords"
         content="sunil jangir, sunil, web developer sunil, supermatt7, supermatt, matt7, supermate7, ips business school, ips college jaipur, ipsb, bca, BCA">
-    <meta http-equiv='cache-control' content='no-cache'>
-    <meta http-equiv='expires' content='0'>
-    <meta http-equiv='pragma' content='no-cache'>
     <link rel="stylesheet" href="css/main/styles.css">
     <link rel="shortcut icon" href="img/logonobg.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -342,21 +339,21 @@
                 </form>
                 <div class="contact-container-2">
                     <div class="contact-icon">
-                        <img class="fas fa-phone" src="img/telephone.png" width="35px">
+                        <img class="fas fa-phone" src="img/telephone.png" width="35px" alt="contact-options">
                     </div>
                     <div class="contact-info">
                         <h4>Phone:</h4>
                         <p>+91 8875170636</p>
                     </div>
                     <div class="contact-icon">
-                        <img class="fas fa-envelope" src="img/gmail.png" width="35px">
+                        <img class="fas fa-envelope" src="img/gmail.png" width="35px" alt="contact-options">
                     </div>
                     <div class="contact-info">
                         <h4>Email:</h4>
                         <p>sunil@supermatt7.live</p>
                     </div>
                     <div class="contact-icon">
-                        <img class="fas fa-map-marker-alt" src="img/location.png" width="35px">
+                        <img class="fas fa-map-marker-alt" src="img/location.png" width="35px" alt="contact-options">
                     </div>
                     <div class="contact-info">
                         <h4>Address:</h4>
