--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="css/main/styles.css">
     <link rel="shortcut icon" href="img/logonobg.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <link rel="canonical" href="https://www.supermatt7.live/index.html">
+
     <title>supermatt7</title>
 
-    <script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2"></script> -->
 
 
 </head>
