--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>supermatt7</title>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2"></script>
 
 
 </head>
