made some major changes to code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="google-site-verification" content="cLmYy2sUvJc0jYQTC9ecP9yDgcPkXGTm8_EeLSPq2SU" />
     <meta name="keywords"
         content="sunil jangir, sunil, web developer sunil, supermatt7, supermatt, matt7, supermate7, ips business school, ips college jaipur, ipsb, bca, BCA">
-    <link rel="stylesheet" href="css/main/styles.css">
+    <link rel="stylesheet" href="css/main/styles.css?v=1">
     <link rel="shortcut icon" href="img/logonobg.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="canonical" href="https://www.supermatt7.live/index.html">
@@ -277,14 +277,16 @@
                             <div class="swiper-slide">
                                 <center><a target="_blank" href="https://johndoe-matt7.netlify.app"
                                         class="swiper-links"><img src="img/johndoe.png" alt="john doe project"
-                                            class="swiper-img swiper-for-johndoe"></a>
+                                            class="swiper-img swiper-for-johndoe"
+                                            srcset="img/johndoe.png, img/johndoe2.png 600w"
+                                            sizes="(max-width: 600px)"></a>
                                 </center>
                             </div>
 
                             <div class="swiper-slide">
                                 <center><a target="_blank" href="https://eduhubproject.netlify.app"
                                         class="swiper-links"><img src="img/eduhub.png" alt="eduhub project"
-                                            class="swiper-img swiper-for-eduhub"> </a>
+                                            class="swiper-img swiper-for-eduhub" srcset="img/eduhub2.png 600w, img/eduhub.png" sizes="(max-width: 600px)"> </a>
                                 </center>
                             </div>
                             <div class="swiper-slide">
